--- a/www/sites/all/themes/uclalib_omega/sass/components/_pane-ucla-tab-search-ucla-tab-search-tabs.scss
+++ b/www/sites/all/themes/uclalib_omega/sass/components/_pane-ucla-tab-search-ucla-tab-search-tabs.scss
@@ -40,4 +40,17 @@
     #edit-books-captcha {
       display: none;
     }
+  .form-item.form-type-select.form-item-books-ucla-catalog-search-index {
+    margin-bottom: -0.6em;
+    visibility: hidden;
+    display: block !important;
   }
+  .form-item.form-type-checkbox.form-item-articlesplus-peer-review {
+    margin-bottom: 0;
+    padding-top: 3em;
+  }
+  .form-item.form-type-radio.form-item-journals-catalog:first-child {
+    margin-bottom: 0;
+    padding-top: 3em;
+  }
+}
